# Elevator

./: CMakeLists.txt  README.md  makefile
src/: elevator.cpp  elevator.hpp  main.cpp
tests/: elevatorTests.cpp  elevatorTestsAddTarget.cpp  elevatorTestsInit.cpp  elevatorTestsMove.cpp  elevatorTestsVisitAll.cpp  elevatorTestsVisitAllNearest.cpp
